styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  background-color: #fdfaf8;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  line-height: 1.6;
}

header {
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 1rem;
  background: #fff5f1;
}

nav ul {
  list-style: none;
  text-align: center;
  padding: 1rem;
  background: #ebd0cf;
  font-weight: 600;
}

nav li {
  display: inline-block;
  padding: 8px;
  border-radius: 4px;
  border-color: #f3e3d3;
}

li > a {
  text-decoration: none;
  color: #d4644c;
}

main section {
  display: grid;
  grid-template-columns: 1fr;
  padding: 2rem;
  color: #3a001e;
  height: 100vh;
}

main section .full-width {
  grid-column: 1 / -1;
}

@media (min-width: 768px) {
  main section {
    grid-template-columns: repeat(3, 1fr);
    gap: 12px;
  }
}

.hero-image {
  background-image: linear-gradient(rgba(0, 0, 0, 0.219), rgba(0, 0, 0, 0.5)),
    url("beautysalon.webp");
  height: 100%;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
  border-radius: 16px;
}

.hero-text {
  text-align: center;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: white;
}

.hero-text button {
  border: none;
  outline: 0;
  display: inline-block;
  padding: 10px 25px;
  margin: 16px;
  border-radius: 8px;
  color: #3a001e;
  background-color: #d4644c;
  text-align: center;
  cursor: pointer;
  font-weight: 600;
}

.hero-text button:hover {
  background-color: #3a001e;
  color: white;
}

footer {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 10px;
  padding: 1rem 2rem;
  background: #ebd0cf;
  color: #3a001e;
  text-align: center;
}

@media (max-width: 600px) {
  footer {
    grid-template-columns: 1fr;
  }
}

